[project]
name = "options-calculator"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "streamlit>=1.41.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/options_calculator"]
